# ace-ai

./: CLAUDE.md  README.md  pyproject.toml
frontend/src/: App.jsx
src/ace_ai/: __main__.py  client.py  server.py  tools.py
