[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-ai"
version = "0.0.1"
dependencies = [
    "pybaseball>=2.2.7",
    "pandas",
    "dotenv",
    "anthropic",
    "logging",
    "fastapi",
    "uvicorn",
    "pydantic"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
ace-ai = "src/ace_ai"